/*
 * Copyright (c) 2021 Oracle and/or its affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";
option java_package = "io.helidon.webclient.grpc.tests";

import "google/protobuf/empty.proto";

service ProxyProtocolService {
  rpc GetData (google.protobuf.Empty) returns (ProxyProtocolDataMessage) {}
}

message ProxyProtocolDataMessage {
  optional string sourceAddress = 1;
  optional string destinationAddress = 2;
  optional int32 sourcePort = 3;
  optional int32 destinationPort = 4;
  optional string addressFamily = 5;
  optional string protocol = 6;
  optional string command = 7;
  optional int32 version = 8;
  optional string sourceSocketAddress = 9;
  optional string destinationSocketAddress = 10;
  repeated ProxyProtocolTlvMessage tlvs = 11;
}

message ProxyProtocolTlvMessage {
  optional int32 type = 1;
  optional bytes data = 2;
}